bk_ida/gccida/c2/gen_type_die
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type_die/src/dwarf2out.c:11537:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type_die/src/dwarf2out.c:11540:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type_die/src/dwarf2out.c:11565:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute v50; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type_die/src/dwarf2out.c:11568:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute dw_attr; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type_die/src/dwarf2out.c:11611:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *values; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type_die/src/dwarf2out.c:11624:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *abstract_origin; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type_die/src/dwarf2out.c:11639:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *vindex; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type_die/src/dwarf2out.c:11687:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type_die/src/dwarf2out.c:11688:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v173; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type_die/src/dwarf2out.c:11745:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v9 = ( int)rtl[1]; 
           ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type_die/src/dwarf2out.c:11841:5: error: incomplete definition of type 'struct hash_table'
v141->alloc_node = indirect_string_alloc; 
~~~~^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type_die/src/ggc.h:33:8: note: forward declaration of 'struct hash_table'
struct hash_table;
       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type_die/src/dwarf2out.c:11975:25: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v157.rtwint = ( __int64)v154[1].fld[0]; 
                        ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type_die/src/dwarf2out.c:11987:5: error: incomplete definition of type 'struct hash_table'
v160->alloc_node = indirect_string_alloc; 
~~~~^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type_die/src/ggc.h:33:8: note: forward declaration of 'struct hash_table'
struct hash_table;
       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type_die/src/dwarf2out.c:12155:4: error: incomplete definition of type 'struct hash_table'
v76->alloc_node = indirect_string_alloc; 
~~~^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type_die/src/ggc.h:33:8: note: forward declaration of 'struct hash_table'
struct hash_table;
       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type_die/src/dwarf2out.c:12810:20: error: expected expression
v22 = ( tree_node *)xcalloc( 1uLL, 0x48uLL); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type_die/src/dwarf2out.c:12810:9: error: use of undeclared identifier 'tree_node'
v22 = ( tree_node *)xcalloc( 1uLL, 0x48uLL); 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type_die/src/dwarf2out.c:12846:20: error: expected expression
v25 = ( tree_node *)xcalloc( 1uLL, 0x48uLL); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type_die/src/dwarf2out.c:12846:9: error: use of undeclared identifier 'tree_node'
v25 = ( tree_node *)xcalloc( 1uLL, 0x48uLL); 
        ^
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type_die/src/obj/dwarf2out.o] Error 1
